# tinygrad-models

./: README.md  pyproject.toml
src/: main.py
src/lib/: datasets.py
src/networks/: cifar_classifier.py  mnist.py  mnist_classifier.py  resnet.py
src/runner/: cifar_classifier.py  mnist_classifier.py
